! API: DockFactory has additional methods and generic arguments to deal with PerspectiveElements
! API: various classes and interfaces needed new generic parameters or needed to be made abstract in order to implement the perspective mechanism. Clients should not be affected (much) by these changes as these classes/interfaces are mostly used in a layer that is not interesting for clients.
- API: New perspective API in Core and Common: an additional view of the layout. This one can be easily modified through source code.
- API: Many PreferenceModels now grant access to the Preference objects such that clients can modify them directly
- API: CControl.initExternalizeArea can now be overriden by clients to create a custom ScreenDockStation for externalized items
- Bugfix: DockFrontend no longer stores the same Dockable twice if root-stations are nested
! API: Common now stores the identifier of the working-area which owns a SingleCDockable and changes the working-area property when loading a layout. This is necessary for perspectives which would otherwise work very unintuitive.
- Bugfix: The history of the location of a MultipleCDockable is loaded and applied but only if the MultipleCDockable can be created while loading a persistent layout.
- API: MultipleCDockables now also use placeholders. However, all placeholders for a MultipleCDockable are removed if the MultipleCDockable is closed (unless the MissingCDockableStrategy tells otherwise)
- Bugfix: ScreenDockStation and its strategies now properly support multi monitor environments. The default BoundaryRestriction is now "MEDIUM" instead of "FREE".

[v1.1.0p3]
 ! API: UIProperties now depend on an UIScheme. Basically the UIScheme is a self filling map and UIProperties acts as (mutable) cache. ColorScheme now depends on UIScheme and several methods that were related to ColorScheme got obsolete and were removed.
 - API: DockTheme is now managed by a specialized class ThemeManager and no longer by DockController.