@@ -40,6 +40,7 @@ import javax.swing.JRootPane;
 import javax.swing.KeyStroke;
 
 import bibliothek.gui.DockController;
+import bibliothek.gui.DockTheme;
 import bibliothek.gui.Dockable;
 import bibliothek.gui.dock.focus.DockableSelection;
 import bibliothek.gui.dock.focus.DockableSelectionListener;
@@ -124,7 +125,7 @@ public class DockableSelector {
     }
     
     private void open(){
-        selection = controller.getTheme().getDockableSelection( controller );
+        selection = controller.getProperties().get( DockTheme.DOCKABLE_SELECTION );
         if( selection != null && selection.hasChoices( controller )){
             Window root = controller.findRootWindow();
             if( dialog == null || dialog.getOwner() != root ){
