@@ -1,0 +1,48 @@
+/*
+ * Bibliothek - DockingFrames
+ * Library built on Java/Swing, allows the user to "drag and drop"
+ * panels containing any Swing-Component the developer likes to add.
+ * 
+ * Copyright (C) 2010 Benjamin Sigg
+ * 
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ * 
+ * Benjamin Sigg
+ * benjamin_sigg@gmx.ch
+ * CH - Switzerland
+ */
+package bibliothek.gui.dock.themes;
+
+import bibliothek.gui.DockController;
+import bibliothek.gui.DockTheme;
+import bibliothek.gui.Dockable;
+import bibliothek.gui.dock.dockable.DockableMovingImageFactory;
+import bibliothek.gui.dock.dockable.MovingImage;
+import bibliothek.gui.dock.title.DockTitle;
+
+/**
+ * This {@link DockableMovingImageFactory} forwards any call to the {@link DockTheme} of the
+ * {@link DockController} that called.
+ * @author Benjamin Sigg
+ */
+public class ThemeDockableMovingImageFactory implements DockableMovingImageFactory{
+	public MovingImage create( DockController controller, DockTitle snatched ){
+		return controller.getTheme().getMovingImageFactory( controller ).create( controller, snatched );
+	}
+
+	public MovingImage create( DockController controller, Dockable dockable ){
+		return controller.getTheme().getMovingImageFactory( controller ).create( controller, dockable );
+	}	
+}
